fixed line breaks in long tags

--- a/frontend/styles/styles.css
+++ b/frontend/styles/styles.css
@@ -46,6 +46,13 @@
     -ms-user-select: none;
 }
 
+.tag-label {
+    display: inline;
+    border: 2px solid #CCF;
+    margin: 2px;
+    white-space: nowrap;
+}
+
 .word-wrapper {
     position: absolute;
 }
